[package]
name = "vortex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
dashmap = "5.4.0"
futures = "0.3.28"
parking_lot = "0.12.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tinyset = { version = "0.4.15", features = ["serde"] }
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
