[package]
name = "vortex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compact_str = { version = "0.7.0", features = ["serde"] }
dashmap = "5.4.0"
futures = "0.3.28"
miette = { version = "5.9.0", features = ["fancy"] }
opentelemetry = { version = "0.19.0", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = "0.12.0"
parking_lot = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tinyset = { version = "0.4.15", features = ["serde"] }
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
